@startuml class

class Patient {
  - ID: int
  - Name: string
  - Address: string
  - Phone Number: string
  - Email: string
  - Date of Birth: date
  + getID(): int
  + getName(): string
  + getAddress(): string
  + getPhoneNumber(): string
  + getEmail(): string
  + getDateOfBirth(): date
}

class Appointment {
  - ID: int
  - PatientID: int
  - DateAndTime: datetime
  - DentistID: int
  - Treatment: string
  - Notes: string
  + getID(): int
  + getPatientID(): int
  + getDateAndTime(): datetime
  + getDentistID(): int
  + getTreatment(): string
  + getNotes(): string
}

class Dentist {
  - ID: int
  - Name: string
  - Specialization: string
  - ContactInfo: string
  + getID(): int
  + getName(): string
  + getSpecialization(): string
  + getContactInfo(): string
}

class Treatment {
  - ID: int
  - Name: string
  - Description: string
  - Price: decimal
  + getID(): int
  + getName(): string
  + getDescription(): string
  + getPrice(): decimal
}

Patient "1" --> "0..*" Appointment : has
Appointment "0..*" --> "1" Dentist : assigned to
Appointment "1" --> "0..*" Treatment : requires

@enduml
